chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openai-chatbot
  namespace: emiruzel-dev
spec:
  selector:
    app: openai-chatbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
